Fix Edge bug on button text alignment
Edge was inheriting the wrong font and keeping the text towards the
bottom.

With a purely empirical process, I found out that deleting this one
line fixes it and it doesn't affect Chrome, Firefox, Safari.

--- a/css/reset.css
+++ b/css/reset.css
@@ -82,7 +82,6 @@ button:focus {
 input,
 button {
   margin: 0;
-  font-family: inherit;
   font-size: inherit;
   line-height: inherit;
 }
